src/compiler/snapshots/isa__compiler__parser__tests__chars-6.snap
---
source: src/compiler/parser.rs
expression: "create_parser(r\"'\\''\").parse_expr()"
---
Ok(
    Expr {
        kind: Char(
            39,
        ),
        span: SpanData { file_id: 0, start: 0, end: 4 },
        ty: (),
    },
)
