src/compiler/snapshots/isa__compiler__parser__tests__chars-7.snap
---
source: src/compiler/parser.rs
expression: "create_parser(r#\"'\\\"'\"#).parse_expr()"
---
Ok(
    Expr {
        kind: Char(
            34,
        ),
        span: SpanData { file_id: 0, lo: 0, hi: 4 },
        ty: (),
    },
)
