src/compiler/snapshots/isa__compiler__parser__tests__chars-9.snap
---
source: src/compiler/parser.rs
expression: "create_parser(r\"'1'\").parse_expr()"
---
Ok(
    Expr {
        kind: Char(
            49,
        ),
        span: SpanData { file_id: 0, start: 0, end: 3 },
        ty: (),
    },
)
