src/compiler/snapshots/isa__compiler__parser__tests__idents-10.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"_char\").parse_expr()"
---
Ok(
    Expr {
        kind: Path(
            Path {
                segments: [
                    Ident {
                        ident: "_char",
                        span: SpanData { file_id: 0, start: 0, end: 5 },
                    },
                ],
            },
        ),
        span: SpanData { file_id: 0, start: 0, end: 5 },
        ty: (),
    },
)
